Changed DaySchool by adding padding in it

--- a/DaySchool.html
+++ b/DaySchool.html
@@ -58,8 +58,8 @@
        </div>
        <div style="padding-top:100px; padding-left:30px; padding-right:30px;">
         <h2 style="text-align: center; color:#fe7561; font-weight: bolder;">THE VIBRANCE AT UMEED</h2>
-        <p><strong>Umeed Foundation</strong> is a registered society that provides services for children and young adults with developmental difficulties. The philosophy behind its work is based on the application of well established teaching methodologies and therapies. The Centre has “Structured Environment” that provides a calming as well as motivating learning with acceptance, fun and meaning.</p>
-        <p>Umeed Foundation offers a wide range of clinical services and interventions which can be viewed below:-</p>
+        <p style="text-align: justify;"><strong>Umeed Foundation</strong> is a registered society that provides services for children and young adults with developmental difficulties. The philosophy behind its work is based on the application of well established teaching methodologies and therapies. The Centre has “Structured Environment” that provides a calming as well as motivating learning with acceptance, fun and meaning.</p>
+        <p style="text-align: justify;">Umeed Foundation offers a wide range of clinical services and interventions which can be viewed below:-</p>
         <h3 style="text-align: center; color:#fe7561; text-decoration:underline; font-weight: bolder;">DAY SCHOOL</h3>
         <p><b>GALLERY-</b></p>
         <hr>
@@ -108,7 +108,7 @@
         </div>
         <hr>
   <!-- Gallery -->
-        <div>
+        <div style="text-align: justify;">
         <p>The day school began in  2016 with an objective to support and empower families of children with developmental difficulties. The children and their families receive direct benefit and an improved quality of life. The school uses various established and logically designed training techniques gathered from around the world and try to apply to the Indian context.</p>
         <p>Emphasis is on developing communication, as well as building basic interaction skills, pre-reading and writing skills and concept building which are taught in one-on-one sessions, while group activities are used to develop social skills. Children, who are ready, move on to mainstream classrooms.</p>
         <p>Since 2016, the project has so far directly benefitted more than 5,000 children between the age group of 3-18 years. Conducting four classes a day, we reache out to more than 800 children a year. The parents have also started taking an interest, talking to the teachers about their child’s problems.</p>
