--- a/OutreachProgram.html
+++ b/OutreachProgram.html
@@ -58,8 +58,8 @@
        </div>
        <div style="padding-top:100px; padding-left:30px; padding-right:30px;">
         <h2 style="text-align: center; color:#fe7561; font-weight: bolder;">THE VIBRANCE AT UMEED</h2>
-        <p><strong>Umeed Foundation</strong> is a registered society that provides services for children and young adults with developmental difficulties. The philosophy behind its work is based on the application of well established teaching methodologies and therapies. The Centre has “Structured Environment” that provides a calming as well as motivating learning with acceptance, fun and meaning.</p>
-        <p>Umeed Foundation offers a wide range of clinical services and interventions which can be viewed below:-</p>
+        <p style="text-align: justify;" ><strong>Umeed Foundation</strong> is a registered society that provides services for children and young adults with developmental difficulties. The philosophy behind its work is based on the application of well established teaching methodologies and therapies. The Centre has “Structured Environment” that provides a calming as well as motivating learning with acceptance, fun and meaning.</p>
+        <p style="text-align: justify;">Umeed Foundation offers a wide range of clinical services and interventions which can be viewed below:-</p>
         <h3 style="text-align: center; color:#fe7561; text-decoration:underline; font-weight: bolder;">Outreach Programs</h3>
         <p><b>GALLERY-</b></p>
         <hr>
@@ -108,7 +108,8 @@
         </div>
   <!-- Gallery -->
   <hr>
-  <h4>Umeed Foundation uses a mix combination of behavior-based methods and structured teaching and involves the following programs:</h4>
+  <div style="text-align:justify;">
+  <h4 style="justify-self: start;;">Umeed Foundation uses a mix combination of behavior-based methods and structured teaching and involves the following programs:</h4>
   <ol>
       <li><b>Assesments</b></li>
       <p>Assessments are the foundation stone to identify what services we have to offer to the child or young adult. At Umeed, we conduct different types of assessments depending on the need of the child like Functional Assessments, Occupational Therapy & Sensory Assessments, Language Assessments, and Behavioral Assessments and many more.</p>
@@ -166,6 +167,7 @@
          <p>An individual has to be an integral part of the society and community he/ she belongs to. Umeed plans and supports community visits like at the mall, cinema, parks, worship places, commuting by metro, awareness walk, organizes melas etc.</p>
   </ol>        
  <hr>
+  </div>
     </div>
     <div>
         <div > 
