--- a/index.html
+++ b/index.html
@@ -189,10 +189,12 @@
          <blockquote style="text-align: center;">"Making a donation is the ulimate sign of solidarity.Actions speak louder than words."</blockquote>
          <p style="text-align: center;">-Ibrahim Hooper</p>   
          <br>
-         <div style="padding-left:110px;padding-right:110px;">
-         <h2>We need your help.</h2>
-         <p>As a nonprofit,we rely on donations to provide the features mention in our mission as children deserve:highly specialized,compassionate,family-centered,and customized to the special health needs of children.</p>
-         <p>❤️ 100% of your donation will be spent on the kids and families that are counting on you.</p>
+         <div style="padding-left:15px;padding-right:15px;">
+         <h2 style="text-align: center;">We need your help.</h2>
+         <br>
+         <p style="text-align:justify;">As a nonprofit,we rely on donations to provide the features mention in our mission as children deserve:highly specialized,compassionate,family-centered,and customized to the special health needs of children.</p>
+         <br>
+         <p style="text-align: center;">❤️ 100% of your donation will be spent on the kids and families that are counting on you.</p>
         </div>
         <div class="wrapper"> 
           <a href="index1.html"><button  class="btn">Donate Now</button></a>
