--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-     <title>test -Anubhav Jhawar/title>    
+     <title>test -Anubhav Jhawar</title>    
     </head>
     <body>
     </body>
