added index.html file

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
        <header>
         <div class="container" style="padding-top:20px;" id="Home">
          <div class="row">
-             <img class="BG-1" src="UmEEDFOUNDATION1.png" alt="">
+             <img class="BG-1" src="1234.gif" alt="">
           </div> 
         </div>
       </header>
@@ -75,7 +75,7 @@
       <div class="BG-1" style="padding-bottom:20px; padding-top:20px;" >
       <div class="container">
         <div class="row">
-            <img class="BG-1" src="2.png" alt="">
+            <img class="BG-1" src="photo.jpg" alt="">
          </div> 
          </div>
         </div>
@@ -117,7 +117,7 @@
       </div> 
     </div>
     <div class="BG-1" id="Testimonial">
-      <h1 style="background-color:navajowhite; text-align:center; " >Testimonial Section</h1>
+      <h1 style="background-color:rgb(23, 197, 197); text-align:center; " >Testimonial Section</h1>
       <div class="Testimonial">
       <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
@@ -236,7 +236,7 @@
               <input type="text" placeholder="Enter email address">
               <input type="text" placeholder="Enter name">
           <input type="number" placeholder="Enter number">
-              <textarea class="TA" type="text" placeholder="Enter name">Enter Message Here...</textarea>
+              <input  class="TA" type="text" placeholder="Enter Message Here..."></input>
               <input type="submit" name="" value="Send">
             </form>
           </div>
